--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   card_swiper: ^3.0.1
   path_provider: ^2.1.5
   url_launcher: ^6.3.1
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
